welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:16: error: ')' expected but ';' found.
        setCouleurBrosse(tab((j+decalage)%tab.length);
                                                     ^